--- a/test-output/index.html
+++ b/test-output/index.html
@@ -2,9 +2,10 @@
 
 <html>
   <head>
+  <meta charset='utf-8'>
   <title>TestNG reports</title>
 
-    <link type="text/css" href="testng-reports.css" rel="stylesheet" />  
+    <link type="text/css" href="testng-reports.css" rel="stylesheet" />
     <script type="text/javascript" src="jquery-1.7.1.min.js"></script>
     <script type="text/javascript" src="testng-reports.js"></script>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
@@ -48,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\ngoctmphan\AppData\Local\Temp\testng-eclipse-341847800\testng-customsuite.xml</span>
+                    <span>C:\Users\ngoctmphan\AppData\Local\Temp\testng-eclipse--1915786993\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -90,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods,   5 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -101,27 +102,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="SeleniumAPI.Session03_Exercise01" hash-for-method="Exercise01">Exercise01</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="SeleniumAPI.dataProvider" hash-for-method="TC01_Success(mngr214187, nadEmEq)">TC01_Success(mngr214187, nadEmEq)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="SeleniumAPI.Session03_Exercise01" hash-for-method="Exercise02">Exercise02</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="SeleniumAPI.dataProvider" hash-for-method="TC01_Success(mngr214186, jypAmYd)">TC01_Success(mngr214186, jypAmYd)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="SeleniumAPI.Session03_Exercise01" hash-for-method="Exercise03">Exercise03</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="SeleniumAPI.Session03_Exercise01" hash-for-method="Exercise04">Exercise04</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="SeleniumAPI.Session03_Exercise01" hash-for-method="Exercise05">Exercise05</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="SeleniumAPI.dataProvider" hash-for-method="TC03_Unsuccess(vunguyen, 123456789)">TC03_Unsuccess(vunguyen, 123456789)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -139,42 +130,31 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">SeleniumAPI.Session03_Exercise01</span>
+              <span class="class-name">SeleniumAPI.dataProvider</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="Exercise01">
-                  </a> <!-- Exercise01 -->
-                  <span class="method-name">Exercise01</span>
+                  <a name="TC01_Success(mngr214187, nadEmEq)">
+                  </a> <!-- TC01_Success(mngr214187, nadEmEq) -->
+                  <span class="method-name">TC01_Success</span>
+                  <span class="parameters">(mngr214187, nadEmEq)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="Exercise02">
-                  </a> <!-- Exercise02 -->
-                  <span class="method-name">Exercise02</span>
+                  <a name="TC01_Success(mngr214186, jypAmYd)">
+                  </a> <!-- TC01_Success(mngr214186, jypAmYd) -->
+                  <span class="method-name">TC01_Success</span>
+                  <span class="parameters">(mngr214186, jypAmYd)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="Exercise03">
-                  </a> <!-- Exercise03 -->
-                  <span class="method-name">Exercise03</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="Exercise04">
-                  </a> <!-- Exercise04 -->
-                  <span class="method-name">Exercise04</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="Exercise05">
-                  </a> <!-- Exercise05 -->
-                  <span class="method-name">Exercise05</span>
+                  <a name="TC03_Unsuccess(vunguyen, 123456789)">
+                  </a> <!-- TC03_Unsuccess(vunguyen, 123456789) -->
+                  <span class="method-name">TC03_Unsuccess</span>
+                  <span class="parameters">(vunguyen, 123456789)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -182,16 +162,16 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\ngoctmphan\AppData\Local\Temp\testng-eclipse-341847800\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\ngoctmphan\AppData\Local\Temp\testng-eclipse--1915786993\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
-  &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;SeleniumAPI.Session03_Exercise01&quot;/&gt;
+      &lt;class name=&quot;SeleniumAPI.dataProvider&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -231,32 +211,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(5);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'Exercise05')
-data.setCell(0, 2, 'SeleniumAPI.Session03_Exercise01')
-data.setCell(0, 3, 4033);
+data.setCell(0, 1, 'TC01_Success')
+data.setCell(0, 2, 'SeleniumAPI.dataProvider')
+data.setCell(0, 3, 2649);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'Exercise01')
-data.setCell(1, 2, 'SeleniumAPI.Session03_Exercise01')
-data.setCell(1, 3, 1817);
+data.setCell(1, 1, 'TC01_Success')
+data.setCell(1, 2, 'SeleniumAPI.dataProvider')
+data.setCell(1, 3, 2605);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'Exercise03')
-data.setCell(2, 2, 'SeleniumAPI.Session03_Exercise01')
-data.setCell(2, 3, 532);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'Exercise04')
-data.setCell(3, 2, 'SeleniumAPI.Session03_Exercise01')
-data.setCell(3, 3, 476);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'Exercise02')
-data.setCell(4, 2, 'SeleniumAPI.Session03_Exercise01')
-data.setCell(4, 3, 359);
+data.setCell(2, 1, 'TC03_Unsuccess')
+data.setCell(2, 2, 'SeleniumAPI.dataProvider')
+data.setCell(2, 3, 582);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 seconds</span>
+              <span class="suite-total-time">Total running time: 5 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -282,34 +254,38 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">SeleniumAPI.Session03_Exercise01</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">SeleniumAPI.dataProvider</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">BeforeClass</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
+              <div class="configuration-method before">
+                <span class="method-name">beforeMethod</span>
+                <span class="method-start">4164 ms</span>
+              </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">Exercise01</span>
-                <span class="method-start">4439 ms</span>
+                <span class="method-name">TC01_Success(mngr214186, jypAmYd)</span>
+                <span class="method-start">7907 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method before">
+                <span class="method-name">beforeMethod</span>
+                <span class="method-start">10559 ms</span>
+              </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">Exercise02</span>
-                <span class="method-start">6257 ms</span>
+                <span class="method-name">TC01_Success(mngr214187, nadEmEq)</span>
+                <span class="method-start">13942 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method before">
+                <span class="method-name">beforeMethod</span>
+                <span class="method-start">16550 ms</span>
+              </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">Exercise03</span>
-                <span class="method-start">6617 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">Exercise04</span>
-                <span class="method-start">7150 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">Exercise05</span>
-                <span class="method-start">7627 ms</span>
+                <span class="method-name">TC03_Unsuccess(vunguyen, 123456789)</span>
+                <span class="method-start">19708 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">AfterClass</span>
-                <span class="method-start">11661 ms</span>
+                <span class="method-start">20292 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
