--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,18 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6fb494">  <td>19/07/07 17:40:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Session03_Exercise01.AfterClass()[pri:0, instance:SeleniumAPI.Session03_Exercise01@6a024a67]">&lt;&lt;AfterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1268650975</td>   <td></td> </tr>
-<tr bgcolor="6fb494">  <td>19/07/07 17:40:23</td>   <td>-11659</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Session03_Exercise01.BeforeClass()[pri:0, instance:SeleniumAPI.Session03_Exercise01@6a024a67]">&gt;&gt;BeforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1268650975</td>   <td></td> </tr>
-<tr bgcolor="6fb494">  <td>19/07/07 17:40:28</td>   <td>-7222</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Session03_Exercise01.Exercise01()[pri:0, instance:SeleniumAPI.Session03_Exercise01@6a024a67]">Exercise01</td> 
-  <td>main@1268650975</td>   <td></td> </tr>
-<tr bgcolor="6fb494">  <td>19/07/07 17:40:30</td>   <td>-5404</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Session03_Exercise01.Exercise02()[pri:0, instance:SeleniumAPI.Session03_Exercise01@6a024a67]">Exercise02</td> 
-  <td>main@1268650975</td>   <td></td> </tr>
-<tr bgcolor="6fb494">  <td>19/07/07 17:40:30</td>   <td>-5044</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Session03_Exercise01.Exercise03()[pri:0, instance:SeleniumAPI.Session03_Exercise01@6a024a67]">Exercise03</td> 
-  <td>main@1268650975</td>   <td></td> </tr>
-<tr bgcolor="6fb494">  <td>19/07/07 17:40:31</td>   <td>-4511</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Session03_Exercise01.Exercise04()[pri:0, instance:SeleniumAPI.Session03_Exercise01@6a024a67]">Exercise04</td> 
-  <td>main@1268650975</td>   <td></td> </tr>
-<tr bgcolor="6fb494">  <td>19/07/07 17:40:31</td>   <td>-4034</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Session03_Exercise01.Exercise05()[pri:0, instance:SeleniumAPI.Session03_Exercise01@6a024a67]">Exercise05</td> 
-  <td>main@1268650975</td>   <td></td> </tr>
+<tr bgcolor="ecbaaa">  <td>19/08/04 17:35:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;dataProvider.AfterClass()[pri:0, instance:SeleniumAPI.dataProvider@4b1c1ea0]">&lt;&lt;AfterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1615056168</td>   <td></td> </tr>
+<tr bgcolor="ecbaaa">  <td>19/08/04 17:35:02</td>   <td>-20288</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;dataProvider.BeforeClass()[pri:0, instance:SeleniumAPI.dataProvider@4b1c1ea0]">&gt;&gt;BeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1615056168</td>   <td></td> </tr>
+<tr bgcolor="ecbaaa">  <td>19/08/04 17:35:10</td>   <td>-12385</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="dataProvider.TC01_Success(java.lang.String, java.lang.String)[pri:0, instance:SeleniumAPI.dataProvider@4b1c1ea0]">TC01_Success</td> 
+  <td>main@1615056168</td>   <td></td> </tr>
+<tr bgcolor="ecbaaa">  <td>19/08/04 17:35:16</td>   <td>-6350</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="dataProvider.TC01_Success(java.lang.String, java.lang.String)[pri:0, instance:SeleniumAPI.dataProvider@4b1c1ea0]">TC01_Success</td> 
+  <td>main@1615056168</td>   <td></td> </tr>
+<tr bgcolor="ecbaaa">  <td>19/08/04 17:35:22</td>   <td>-584</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="dataProvider.TC03_Unsuccess(java.lang.String, java.lang.String)[pri:0, instance:SeleniumAPI.dataProvider@4b1c1ea0]">TC03_Unsuccess</td> 
+  <td>main@1615056168</td>   <td></td> </tr>
+<tr bgcolor="ecbaaa">  <td>19/08/04 17:35:06</td>   <td>-16128</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;dataProvider.beforeMethod()[pri:0, instance:SeleniumAPI.dataProvider@4b1c1ea0]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1615056168</td>   <td></td> </tr>
+<tr bgcolor="ecbaaa">  <td>19/08/04 17:35:13</td>   <td>-9733</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;dataProvider.beforeMethod()[pri:0, instance:SeleniumAPI.dataProvider@4b1c1ea0]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1615056168</td>   <td></td> </tr>
+<tr bgcolor="ecbaaa">  <td>19/08/04 17:35:19</td>   <td>-3742</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;dataProvider.beforeMethod()[pri:0, instance:SeleniumAPI.dataProvider@4b1c1ea0]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1615056168</td>   <td></td> </tr>
 </table>
