--- a/test-output/old/NgocTest/classes.html
+++ b/test-output/old/NgocTest/classes.html
@@ -4,11 +4,15 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>SeleniumAPI.dataProvider</td>
+<td>SeleniumAPI.loginGuru</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC02_Success</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>TC01_Success</td>
